# alpha-max-zero

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  ISSUES.md  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
src/alpha_max_zero/: game.py  kernels.py  main.py  random.py
src/alpha_max_zero/kernels/: mcts.mojo  random.mojo  sleep.mojo
src/alpha_max_zero/kernels/games/: tic_tac_toe.mojo  traits.mojo
tests/: conftest.py  test_dummy.py  test_gil_release.py  test_pcg_random.py  test_tic_tac_toe.py
