[project]
name = "alpha-max-zero"
version = "0.1.0"
description = "An implementation of AlphaZero using the Modular Max APIs"
readme = "README.md"
authors = [
    { name = "Brendan Hansknecht", email = "brendan.hansknecht@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "modular>=25.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "pytest-watcher>=0.4.3",
    "ruff>=0.12.2",
    "modular>=25.4.0",
]

[project.scripts]
alpha-max-zero = "alpha_max_zero.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
# These seem to work poorly with modular's library.
# They hit many errors on inputs and function calls.
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
 
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
modular = [
    { index = "modular-stable" },
]
max = [
    { index = "modular-stable" },
]
 
# One day, hopefully max will be free of this.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "modular-stable"
url = "https://modular.gateway.scarf.sh/simple/"
explicit = true

[[tool.uv.index]]
name = "modular-nightly"
url = "https://dl.modular.com/public/nightly/python/simple/"
explicit = true
